# mujoco_mycobot

./: CMakeLists.txt  README.md  main.cpp  make.bash  mycobot_pi.xml  new_mycobot_model.xml
official_model/: 10.J5¸Ç^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  11.J6Ö÷Ìå^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  12.J6¸Ç^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  13.Ä©¶Ë^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  3004WK-20161106-A0_AF0_1^·çÉÈ(2)_·çÉÈ.ipt  5.J3Ö÷Ìå^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  6.J3¸Ç^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  7.J4Ö÷Ìå^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  8.J4¸Ç^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  9.J5Ö÷Ìå^ÕûÌåÍâ·¢Ä£ÐÍ.ipt  ATOM_ASM_ASM_1_ASM_1_ASM^atom_matrix_Ð¡ÆÁÄ».iam  DX02000001.ipt  HSINK_P1^·çÉÈ(2)_·çÉÈ.ipt  PCBZ.ipt  RB3004__AF0_13^·çÉÈ(2)_·çÉÈ.ipt  ST6A1914L8_10_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_11_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_12_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_15_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_17_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_1_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_2_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_3_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_5_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  ST6A1914L8_6_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».ipt  atom_matrix^Ð¡ÆÁÄ».iam  µ××ù²¿·ÖG4.ipt  (+8 more)
(+8 files in other folders)
